chore: Code cleanup, resolve Sonar issues
- rename variables that hide fields
- remove obsolete public modifier
- refactor lamdas in assertThatThrownBy() to have only one invocation throwing a runtime exception
- replace isAfterOrEqualsTo by isAfterOrEqualTo
- replace isBeforeOrEqualsTo by isBeforeOrEqualTo
- add missing @Override annotations
- Remove unnecessary public modifiers from tests
- Use replace() instead of replaceAll() where no regexp replacement is needed
- refactor string concatenation
- remove obsolete throws declaration